--- a/po/wesnoth-dm/sk.po
+++ b/po/wesnoth-dm/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: 2019-01-23 07:47+0100\n"
+"PO-Revision-Date: 2019-01-26 16:43+0100\n"
 "Last-Translator: PaulP <paulp@hotmail.sk>\n"
 "Language-Team: none\n"
 "Language: sk\n"
@@ -3555,7 +3555,7 @@ msgstr "Za kráľa!"
 #. [message]: speaker=Zorlan
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:457
 msgid "Argh! It can't be, beaten by these swine!"
-msgstr ""
+msgstr "Ach! To nie je možné, že by ma porazili tieto svine!"
 
 #. [scenario]: id=16_Dark_Sky_Over_Weldyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:3
@@ -4864,7 +4864,7 @@ msgstr "Stráže sú mŕtve. Teraz musíme pohľadať knihu."
 #. [objective]: condition=win
 #: data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg:346
 msgid "Find the secret door to enter the manor"
-msgstr "Nájdi tajné dvere a vstúp na panstvo."
+msgstr "Nájdi tajné dvere a vstúp na panstvo"
 
 #. [message]: id=$unit.id
 #: data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg:372
@@ -5175,7 +5175,7 @@ msgstr "Iliah-Malal"
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/utils/deaths.cfg:13
 msgid "No! There is still more that I must do!"
-msgstr ""
+msgstr "Nie! Ešte musím veľa urobiť!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/utils/deaths.cfg:27
