--- a/po/wesnoth-dw/sk.po
+++ b/po/wesnoth-dw/sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2019-01-23 07:50+0100\n"
+"PO-Revision-Date: 2019-01-26 16:48+0100\n"
 "Last-Translator: PaulP <paulp@hotmail.sk>\n"
 "Language-Team: none\n"
 "Language: sk\n"
@@ -1566,10 +1566,8 @@ msgstr "Zdá sa, že ten ork bol bohatý! Má tu truhlicu s vyše 100 zláťakmi
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/05_Tirigaz.cfg:745
-#, fuzzy
-#| msgid "Destroy all the undead"
 msgid "Now we must defeat the undead."
-msgstr "Poraz všetkých nemŕtvych"
+msgstr "Teaz musíme poraziť nemŕtvych."
 
 #. [message]: speaker=Marg-Tonz
 #. orc's boss' last breath, deliberately gendered instead of changing to "merfolk"
@@ -1627,7 +1625,7 @@ msgstr "Pozri sa, miláčikovia moji, aký pekný darček nám prišiel!"
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:174
 msgid "Or...is he <i>talking</i> to it?!"
-msgstr "On sa s tým <i>rozpráva</i>?"
+msgstr "On sa s tým <i>rozpráva</i>?!"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:178
@@ -1753,8 +1751,6 @@ msgstr "Vlagnor"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:124
-#, fuzzy
-#| msgid "What are you mermen doing here?"
 msgid "What are you merfolk doing here?"
 msgstr "Čo tu vy, morskí ľudia, robíte?"
 
@@ -1782,10 +1778,6 @@ msgstr "Bosorkou?"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:144
-#, fuzzy
-#| msgid ""
-#| "She kill drakes. If you are her friend, we will kill you. We do not want "
-#| "MORE mermen blasting and stabbing."
 msgid ""
 "She kill drakes. If you are her friend, we will kill you. We do not want "
 "MORE merfolk blasting and stabbing."
@@ -2525,7 +2517,7 @@ msgstr "Priateľ Siddry!"
 #. [message]: speaker=Howyrth
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:436
 msgid "You know each other?!"
-msgstr "Vy sa navzájom poznáte?"
+msgstr "Vy sa navzájom poznáte?!"
 
 #. [message]: speaker=Siddry
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:440
@@ -2546,16 +2538,12 @@ msgstr "Pripojím sa k tebe hneď! To monštrum je neznesiteľné."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:575
-#, fuzzy
-#| msgid ""
-#| "The mermen clapped their hands over their ears as a terrible wail echoed "
-#| "off the castle walls."
 msgid ""
 "The merfolk clapped their hands over their ears as a terrible wail echoed "
 "off the castle walls."
 msgstr ""
-"Morskí ľudia si zakryli svoje uši pred otrasným výkrikom, ktorý sa ozýval od "
-"hradných stien."
+"Morskí ľudia si zakryli svoje uši pred otrasným výkrikom, ktorý sa odrážal "
+"od hradných stien."
 
 #. [message]: speaker=Kai Krellis
 #. [message]: speaker=second_unit
@@ -2772,14 +2760,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:17
-#, fuzzy
-#| msgid ""
-#| "The tribe that had fled Jotha unable to fight returned as an army "
-#| "stiffened by veteran fighters and led by a warrior king. Though they were "
-#| "tired from their journey, weariness fell from them as they neared home. "
-#| "The mermen arrived during the night, and found the mouth of their bay "
-#| "guarded, so they headed south along the coast to some outlying villages "
-#| "to gather news of the invaders."
 msgid ""
 "The tribe that had fled Jotha unable to fight returned as an army stiffened "
 "by veteran fighters and led by a warrior king. Though they were tired from "
@@ -2792,7 +2772,7 @@ msgstr ""
 "s armádou naplnenou veteránmi a vedený kráľom bojovníkom. Aj keď boli "
 "vyčerpaní z dlhej cesty, neďaleko ich bývalého domova z nich únava opadla. "
 "Morský ľud dorazil k Jote počas noci a našiel ústie Jotského zálivu do mora "
-"strážené,  takže boli nútení ísť ďalej na juh popri pobreží k nejakým "
+"strážené, takže boli nútení ísť ďalej na juh popri pobreží k nejakým "
 "odľahlým dedinám získať správy o votrelcoch."
 
 #. [message]: speaker=Nebthun
@@ -2848,8 +2828,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:491
-#, fuzzy
-#| msgid "At dawn, the mermen got a good look at their opponents."
 msgid "At dawn, the merfolk got a good look at their opponents."
 msgstr ""
 "Na úsvite sa morským ľudom naskytol dobrý výhľad na svojich protivníkov."
@@ -2929,7 +2907,7 @@ msgstr "Získali sme naspäť náš domov!"
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:808
 msgid "Cylanna! I will miss you."
-msgstr "Cylanna! Nemôžem ťa stratiť!"
+msgstr "Cylanna! Budeš mi chýbať."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:819
@@ -2994,15 +2972,6 @@ msgstr "Epilóg"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:33
-#, fuzzy
-#| msgid ""
-#| "After destroying Mal-Ravanal’s henchmen, Kai Krellis awaited another "
-#| "attack. But it never came. Krellis sent some messengers south to discover "
-#| "what they could. The news that came back was better than good. Mal-"
-#| "Ravanal was dead! Soldiers of Wesnoth had defeated him at about the same "
-#| "time the mermen had defeated the undead at Jotha. With the evil wizard "
-#| "gone, the mermen relaxed and began rebuilding in earnest, and soon Jotha "
-#| "was restored."
 msgid ""
 "After destroying Mal-Ravanal’s henchmen, Kai Krellis awaited another attack. "
 "But it never came. Krellis sent some messengers south to discover what they "
@@ -3186,17 +3155,13 @@ msgstr "Morský civil"
 
 #. [unit_type]: id=Merman Citizen, race=merman
 #: data/campaigns/Dead_Water/units/Citizen.cfg:17
-#, fuzzy
-#| msgid ""
-#| "Mermen are mostly peaceful, but will fight to defend their homes. In this "
-#| "situation, even mermen with no weapons or training can be dangerous."
 msgid ""
 "Merfolk are mostly peaceful, but will fight to defend their homes. In this "
 "situation, even merfolk with no weapons or training can be dangerous."
 msgstr ""
-"Morskí ľudia sú veľmi pokojná, kľudná a rozvážna rasa, ale bojujú iba aby "
-"obránili svoje domovy. V takejto situácii aj civilisti bez zbraní alebo "
-"akéhokoľvek tréningu dokážu byť nebezpeční."
+"Morský ľud je obyčajne pokojný, ale budú bojovať aby obránili svoje domovy. "
+"V takejto situácii aj civilisti bez zbraní alebo akéhokoľvek tréningu dokážu "
+"byť nebezpeční."
 
 #. [unit_type]: id=Kraken, race=monster
 #: data/campaigns/Dead_Water/units/Kraken.cfg:5
@@ -3268,7 +3233,7 @@ msgstr ""
 #. shown in the status table
 #: data/campaigns/Dead_Water/utils/dw-utils.cfg:73
 msgid "user_team_name^Merfolk"
-msgstr ""
+msgstr "Morskí ľudia"
 
 #: data/campaigns/Dead_Water/utils/dw-utils.cfg:77
 msgid "Kai Krellis"
@@ -3281,16 +3246,14 @@ msgstr "Hromový trojzubec"
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:11
-#, fuzzy
-#| msgid "This weapon shoots powerful lightning bolts at your enemies."
 msgid ""
 "This trident gives merfolk the power to throw lightning at their enemies."
-msgstr "Pomocou tejto zbrane môžeš vrhať na svojich nepriateľov ohnivé blesky."
+msgstr ""
+"Tento trojzubec umožňuje morským ľuďom vrhať na svojich nepriateľov ohnivé "
+"blesky."
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:13
-#, fuzzy
-#| msgid "Only a merman can use this item."
 msgid "Only the merfolk can use this item."
 msgstr "Iba morský človek môže používať tento predmet."
 
