--- a/po/wesnoth/sk.po
+++ b/po/wesnoth/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 12:23+0300\n"
-"PO-Revision-Date: 2018-04-24 01:06+0200\n"
+"PO-Revision-Date: 2019-01-26 17:40+0100\n"
 "Last-Translator: aceman <acelists@atlas.sk>\n"
 "Language-Team: none\n"
 "Language: sk_SK\n"
@@ -206,7 +206,7 @@ msgstr "Zobraziť grafické efekty špeciálnych jednotiek"
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:178
 msgid "Show deprecation messages in-game"
-msgstr ""
+msgstr "Zobrazovať v hre hlásenia o zastaralých funkciách"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:179
@@ -215,11 +215,15 @@ msgid ""
 "will still be shown in the log, even if this is disabled. In addition, the "
 "deprecation log-domain controls how many messages are printed."
 msgstr ""
+"Zobrazovať hlásenia o zastaralých rozhraniach (API) v oblasti rozhovoru. "
+"Tieto hlásenia sa budú zobrazovať v zázname aj keď je toto vypnuté. "
+"Nastavenie oblasti záznamu o zastaralých funkciách kontroluje koľko hlásení "
+"bude zobrazených."
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:186
 msgid "Use experimental PRNG combat"
-msgstr ""
+msgstr "Použiť experimentálny súboj PRNG"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:187
@@ -231,6 +235,13 @@ msgid ""
 "Note: this option only affects singleplayer, and the ‘Save random seed’ "
 "option must also be enabled when creating a game for this to work."
 msgstr ""
+"Zapne deterministické výpočty pravdepodobnosti zásahu. Toto je "
+"experimentálna funkcia, ktorá zosúladí pozorovaný pomer zásahov a netrafení "
+"so zobrazenými percentami.\n"
+"\n"
+"Poznámka: táto voľba ovplyvňuje len hru jedného hráča, pretože pre správnu "
+"funkciu musí byť pri vytváraní hry zapnutá voľba ‘Uložiť východzí stav "
+"náhodných čísel’."
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:197
@@ -366,10 +377,8 @@ msgstr "Správcovia prekladu"
 
 #. [about]
 #: data/core/about.cfg:323
-#, fuzzy
-#| msgid "Traits"
 msgid "Trailers"
-msgstr "Vlastnosti"
+msgstr "Trailery"
 
 #. [about]
 #: data/core/about.cfg:335
@@ -1706,13 +1715,11 @@ msgstr ""
 
 #. [object]
 #: data/core/macros/items.cfg:521
-#, fuzzy
-#| msgid "This trident allows a merman to shoot electric bolts at his enemies!"
 msgid ""
 "This trident gives merfolk the power to throw lightning at their enemies."
 msgstr ""
-"Tento trojzubec umožňuje morskému mužovi strieľať na svojich nepriateľov "
-"elektrické výboje!"
+"Tento trojzubec umožňuje morským ľuďom strieľať na svojich nepriateľov "
+"blesky."
 
 #. [effect]: type=fire
 #: data/core/macros/items.cfg:525
@@ -3278,7 +3285,7 @@ msgstr "Tyrkysová"
 #. [color_range]: id=gold
 #: data/core/team-colors.cfg:107
 msgid "color^Gold"
-msgstr ""
+msgstr "Zlatá"
 
 #. [color_range]: id=reef
 #: data/core/team-colors.cfg:116
@@ -3391,10 +3398,8 @@ msgstr "Wesnoth (Štandardná)"
 
 #. [core]: id=default
 #: data/cores.cfg:8
-#, fuzzy
-#| msgid "The Battle for Wesnoth Help"
 msgid "The standard Wesnoth core."
-msgstr "Návod k Bitke o Wesnoth"
+msgstr "Štandardné jadro Wesnothu."
 
 #. [language]
 #: data/english.cfg:3
@@ -3793,7 +3798,7 @@ msgstr ""
 #. [lua]: wesnoth.deprecate_api
 #: data/lua/core.lua:187
 msgid "(Note: You should use $replacement instead in new code)"
-msgstr ""
+msgstr "(Poznámka: Pri novom vývoji by ste mali použiť $replacement)"
 
 #. #-#-#-#-#  wesnoth.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [lua]: wesnoth.deprecate_api
@@ -4890,10 +4895,8 @@ msgstr ""
 
 #. [tip]
 #: data/tips.cfg:262
-#, fuzzy
-#| msgid "<i>― Memoirs of Gweddry, 627YW</i>"
 msgid "<i>― Sir Gerrick of Westin, 607YW</i>"
-msgstr "<i>― Pamäti Gweddryho, 627 R.W.</i>"
+msgstr "<i>― Sir Gerrick z Westinu, 607 R.W.</i>"
 
 #. [tip]
 #: data/tips.cfg:266
@@ -4907,10 +4910,8 @@ msgstr ""
 "liečia."
 
 #: src/actions/advancement.cpp:222
-#, fuzzy
-#| msgid "No advancement"
 msgid "an advancement choice"
-msgstr "Žiadne povýšenie"
+msgstr "voľba povýšenia"
 
 #: src/actions/attack.cpp:602 src/actions/attack.cpp:1349
 msgid "An invalid attacker weapon got selected."
@@ -5829,10 +5830,8 @@ msgstr "Neznáma éra"
 
 #: src/game_initialization/lobby_data.cpp:353
 #: src/game_initialization/lobby_data.cpp:386
-#, fuzzy
-#| msgid "scenario settings^Side"
 msgid "scenario_abbreviation^S"
-msgstr "Strana"
+msgstr "S"
 
 #: src/game_initialization/lobby_data.cpp:372
 msgid "Remote scenario"
@@ -5841,7 +5840,7 @@ msgstr "Scéna z iného počítača"
 #: src/game_initialization/lobby_data.cpp:394
 #: src/game_initialization/lobby_data.cpp:417
 msgid "campaign_abbreviation^C"
-msgstr ""
+msgstr "V"
 
 #: src/game_initialization/lobby_data.cpp:422
 msgid "Unknown scenario"
@@ -5860,7 +5859,7 @@ msgstr[2] "Voľné miesta:"
 
 #: src/game_initialization/lobby_data.cpp:449
 msgid "mp_game_available_slots^Full"
-msgstr ""
+msgstr "Plné"
 
 #: src/game_initialization/lobby_data.cpp:460
 #: src/game_initialization/lobby_data.cpp:462 src/savegame.cpp:631
@@ -5868,16 +5867,12 @@ msgid "Turn"
 msgstr "Kolo"
 
 #: src/game_initialization/lobby_data.cpp:475
-#, fuzzy
-#| msgid "vision: "
 msgid "vision^none"
-msgstr "dohľadnosť: "
+msgstr "žiadna"
 
 #: src/game_initialization/lobby_data.cpp:484
-#, fuzzy
-#| msgid "Time limit"
 msgid "time limit^none"
-msgstr "Časový limit"
+msgstr "žiadny"
 
 #: src/game_initialization/lobby_data.cpp:524
 msgid ""
@@ -5968,21 +5963,18 @@ msgid " This server disallows unregistered nicknames."
 msgstr " Tento server nepovoľuje neregistrované prezývky."
 
 #: src/game_initialization/multiplayer.cpp:326
-#, fuzzy
-#| msgid "The nickname ‘$nick’ is registered on this server."
 msgid "The nickname ‘$nick’ is banned on this server’s forums."
-msgstr "Prezývka ‘$nick’ je na tomto serveri registrovaná."
+msgstr "Prezývka ‘$nick’ zakázaná na fóre na tomto serveri."
 
 #: src/game_initialization/multiplayer.cpp:328
 msgid "Your IP address is banned on this server’s forums."
 msgstr ""
 
 #: src/game_initialization/multiplayer.cpp:330
-#, fuzzy
-#| msgid "The nickname ‘$nick’ is registered on this server."
 msgid ""
 "The email address for the nickname ‘$nick’ is banned on this server’s forums."
-msgstr "Prezývka ‘$nick’ je na tomto serveri registrovaná."
+msgstr ""
+"Emailová adresa pre prezývku ‘$nick’ zakázaná na fóre na tomto serveri."
 
 #: src/game_initialization/multiplayer.cpp:332
 #: src/game_initialization/multiplayer.cpp:334
@@ -6124,7 +6116,7 @@ msgstr "Nepodarilo sa načítať mapu hry: "
 #: src/game_initialization/playcampaign.cpp:305 src/game_launcher.cpp:872
 #: src/game_launcher.cpp:1006
 msgid "Map generator error: "
-msgstr ""
+msgstr "Chyba vytvárania mapy: "
 
 #: src/game_initialization/playcampaign.cpp:307
 msgid "Error while reading the WML: "
@@ -6170,10 +6162,8 @@ msgid "Error while starting server: "
 msgstr "Chyba spúšťaní servera: "
 
 #: src/game_launcher.cpp:888
-#, fuzzy
-#| msgid "Connection timed out"
 msgid "Connection failed: "
-msgstr "Čas na pripojenie vypršal"
+msgstr "Spojenie zlyhalo: "
 
 #: src/generators/default_map_generator_job.cpp:711
 msgid "Random maps with an odd width aren't supported."
@@ -6410,64 +6400,50 @@ msgstr "Zvýšenie schopností: "
 #. uses spaces, use non-breaking spaces as appropriate for the target language to prevent
 #. unpleasant line breaks (issue #3256).
 #: src/help/help_topic_generators.cpp:512
-#, fuzzy
-#| msgid "HP: "
 msgid "HP:"
-msgstr "Životy: "
+msgstr "Životy:"
 
 #. TRANSLATORS: This string is used in the help page of a single unit.  If the translation
 #. uses spaces, use non-breaking spaces as appropriate for the target language to prevent
 #. unpleasant line breaks (issue #3256).
 #: src/help/help_topic_generators.cpp:516
-#, fuzzy
-#| msgid "Moves: "
 msgid "Moves:"
-msgstr "Kroky: "
+msgstr "Kroky:"
 
 #. TRANSLATORS: This string is used in the help page of a single unit.  If the translation
 #. uses spaces, use non-breaking spaces as appropriate for the target language to prevent
 #. unpleasant line breaks (issue #3256).
 #: src/help/help_topic_generators.cpp:521
-#, fuzzy
-#| msgid "Vision: "
 msgid "Vision:"
-msgstr "Dohľadnosť: "
+msgstr "Dohľadnosť:"
 
 #. TRANSLATORS: This string is used in the help page of a single unit.  If the translation
 #. uses spaces, use non-breaking spaces as appropriate for the target language to prevent
 #. unpleasant line breaks (issue #3256).
 #: src/help/help_topic_generators.cpp:527
-#, fuzzy
-#| msgid "Jamming: "
 msgid "Jamming:"
-msgstr "Blokovanie: "
+msgstr "Blokovanie:"
 
 #. TRANSLATORS: This string is used in the help page of a single unit.  If the translation
 #. uses spaces, use non-breaking spaces as appropriate for the target language to prevent
 #. unpleasant line breaks (issue #3256).
 #: src/help/help_topic_generators.cpp:532
-#, fuzzy
-#| msgid "Cost: "
 msgid "Cost:"
-msgstr "Cena: "
+msgstr "Cena:"
 
 #. TRANSLATORS: This string is used in the help page of a single unit.  If the translation
 #. uses spaces, use non-breaking spaces as appropriate for the target language to prevent
 #. unpleasant line breaks (issue #3256).
 #: src/help/help_topic_generators.cpp:536
-#, fuzzy
-#| msgid "Alignment: "
 msgid "Alignment:"
-msgstr "Príslušnosť: "
+msgstr "Príslušnosť:"
 
 #. TRANSLATORS: This string is used in the help page of a single unit.  It uses
 #. non-breaking spaces to prevent unpleasant line breaks (issue #3256).  In the
 #. translation use non-breaking spaces as appropriate for the target language.
 #: src/help/help_topic_generators.cpp:543
-#, fuzzy
-#| msgid "Required XP: "
 msgid "Required XP:"
-msgstr "Potrebné skúsenosti: "
+msgstr "Potrebné skúsenosti:"
 
 #: src/help/help_topic_generators.cpp:552
 msgid "unit help^Attacks"
@@ -6716,7 +6692,7 @@ msgstr "Teraz nemôžeš privolávať na vybranej pozícii"
 
 #: src/menu_events.cpp:380
 msgid "No unit recalled"
-msgstr ""
+msgstr "Žiadna jednotka nebola privolaná"
 
 #: src/menu_events.cpp:397
 msgid "You must have at least 1 gold piece to recall a unit"
@@ -7270,12 +7246,10 @@ msgid "Save and abort game"
 msgstr "Uložiť a zrušiť hru"
 
 #: src/playturn.cpp:297
-#, fuzzy
-#| msgid "$player has left the game. What do you want to do?"
 msgid ""
 "$player who controlled side $side_drop has left the game. What do you want "
 "to do?"
-msgstr "$player opustil hru. Čo chceš urobiť?"
+msgstr "$player, ktorý ovládal stranu $side_drop opustil hru. Čo chceš urobiť?"
 
 #: src/quit_confirmation.cpp:59
 msgid "Quit"
@@ -7298,10 +7272,8 @@ msgid "Level: "
 msgstr "Úroveň: "
 
 #: src/reports.cpp:258
-#, fuzzy
-#| msgid "Advancements"
 msgid "Advancements:"
-msgstr "Povýšených"
+msgstr "Povýšenia:"
 
 #: src/reports.cpp:271
 msgid "No advancement"
@@ -7481,7 +7453,7 @@ msgstr "Špeciálna zbraň: "
 
 #: src/reports.cpp:935
 msgid "weapon^None"
-msgstr ""
+msgstr "Žiadna"
 
 #: src/reports.cpp:964
 msgid "Total damage"
@@ -7577,7 +7549,7 @@ msgstr "Hodiny"
 
 #: src/reports.cpp:1583
 msgid "Battery"
-msgstr ""
+msgstr "Batéria"
 
 #: src/reports.cpp:1611
 msgid "Countdown until your turn automatically ends."
@@ -7864,12 +7836,10 @@ msgid "A unit was created using debug mode during $player’s turn"
 msgstr "V režime ladenia bola vytvorená jednotka počas ťahu hráča $player"
 
 #: src/synced_user_choice.cpp:327
-#, fuzzy
-#| msgid "waiting for $desc from side(s) $sides"
 msgid "waiting for $desc from side $sides"
 msgid_plural "waiting for $desc from sides $sides"
 msgstr[0] "čaká sa na $desc od strán: $sides"
-msgstr[1] "čaká sa na $desc od strán: $sides"
+msgstr[1] "čaká sa na $desc od strany: $sides"
 msgstr[2] "čaká sa na $desc od strán: $sides"
 
 #: src/terrain/terrain.cpp:181
@@ -7961,14 +7931,11 @@ msgstr[2] "$number body pohybu"
 
 #. TRANSLATORS: Current value for WML code increase_movement_used, documented in https://wiki.wesnoth.org/EffectWML
 #: src/units/attack_type.cpp:429
-#, fuzzy
-#| msgid "<span color=\"$color\">$number_or_percent</span> move"
-#| msgid_plural "<span color=\"$color\">$number_or_percent</span> moves"
 msgid "<span color=\"$color\">$number_or_percent</span> movement point"
 msgid_plural "<span color=\"$color\">$number_or_percent</span> movement points"
-msgstr[0] "<span color=\"$color\">$number_or_percent</span> ťahov"
-msgstr[1] "<span color=\"$color\">$number_or_percent</span> ťah"
-msgstr[2] "<span color=\"$color\">$number_or_percent</span> ťahy"
+msgstr[0] "<span color=\"$color\">$number_or_percent</span> krokov"
+msgstr[1] "<span color=\"$color\">$number_or_percent</span> krok"
+msgstr[2] "<span color=\"$color\">$number_or_percent</span> krokov"
 
 #: src/units/types.cpp:545 src/units/types.hpp:181
 msgid "chaotic"
@@ -8067,10 +8034,8 @@ msgid "$year AF"
 msgstr "$year Po P."
 
 #: src/wesnothd_connection.cpp:402
-#, fuzzy
-#| msgid "Connect to Server"
 msgid "Disconnected from server."
-msgstr "Pripoj sa na server"
+msgstr "Odpojený od serveru."
 
 #: src/whiteboard/manager.cpp:1123
 msgid "SHOW ALL allies’ plans"
