--- a/po/wesnoth-aoi/fr.po
+++ b/po/wesnoth-aoi/fr.po
@@ -1,11 +1,12 @@
-# Mathieu Guilbaud <mathieu@guim.info>, 2018.
+# Mathieu Guilbaud <mathieu@guim.info>, 2018, 2019.
+# Syll <syll-dev@laposte.net>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: An_Orcish_Incursion-1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: 2018-09-12 18:29+0200\n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
+"PO-Revision-Date: 2019-02-09 13:52+0100\n"
+"Last-Translator: Syll <syll-dev@laposte.net>\n"
 "Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -37,8 +38,6 @@ msgstr ""
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:20
-#, fuzzy
-#| msgid "(Novice level, 7 scenarios.)"
 msgid "(Rookie level, 7 scenarios.)"
 msgstr "(Niveau débutant, 7 scénarios.)"
 
@@ -293,6 +292,10 @@ msgid ""
 "me that they are safe, but if we should embark on a campaign then we will "
 "surely need them alongside us in the battles ahead."
 msgstr ""
+"Mon seigneur, aucune de nos guérisseuses n'a d'expérience des champs de "
+"bataille. Je suis heureux qu'elles soient en sécurité, mais si nous devions "
+"nous lancer dans une campagne, leur aide nous serait précieuse pour les "
+"batailles à venir."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:214
@@ -301,6 +304,10 @@ msgid ""
 "pleases me that they are safe, but if we should embark on a campaign then we "
 "will surely need them alongside us in the battles ahead."
 msgstr ""
+"Mon seigneur, aucune de nos guérisseuses n'a d'expérience des champs de "
+"bataille. Je suis heureuse qu'elles soient en sécurité, mais si nous devions "
+"nous lancer dans une campagne, leur aide nous serait précieuse pour les "
+"batailles à venir."
 
 #. [message]: race=elf
 #. the player has recruited some Shamans but has lost all them (or managed to level a Sorceress)
@@ -311,6 +318,10 @@ msgid ""
 "on a campaign then we will surely need them alongside us in the battles "
 "ahead."
 msgstr ""
+"Mon seigneur, aucune de nos guérisseuses ayant survécu n'a d'expérience des "
+"champs de bataille. Les mettre en péril me fend le cœur, mais si nous "
+"devions nous lancer dans une campagne, leur aide nous serait précieuse pour "
+"les batailles à venir."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:229
@@ -320,6 +331,10 @@ msgid ""
 "should embark on a campaign then we will surely need them alongside us in "
 "the battles ahead."
 msgstr ""
+"Mon seigneur, aucune de nos guérisseuses ayant survécu n'a d'expérience des "
+"champs de bataille. Les mettre en péril me fend le cœur, mais si nous "
+"devions nous lancer dans une campagne, leur aide nous serait précieuse pour "
+"les batailles à venir."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:244
