--- a/po/wesnoth-sof/zh_TW.po
+++ b/po/wesnoth-sof/zh_TW.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Traditional Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # 李昆融 <likwueron@gmail.com>, 2010.
 #
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-09-08 22:00+0800\n"
-"Last-Translator: Li, Kwunron <likwueron>\n"
+"PO-Revision-Date: 2019-03-12 12:14+0800\n"
+"Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. [campaign]: id=Sceptre_of_Fire
@@ -174,7 +174,7 @@ msgid ""
 "the Sceptre."
 msgstr ""
 "啊，火焰權杖。這權杖有著悠久、光榮和恐怖的歷史。 但我可不是要說，當年偉大的海"
-"德洛克王是如何從海中撈出權杖上的寶石。 也不是要說葛瑞德一世，他所遭遇到的挑"
+"德洛克王是如何從海中撈出權杖上的寶石。 也不是要說嘉拉德一世，他所遭遇到的挑"
 "戰。 或者是康拉德，藉由權杖之力取得王位之人。"
 
 #. [part]
@@ -314,7 +314,7 @@ msgid ""
 "of the stone could be contained, and that doing so would stop the stone’s "
 "effect."
 msgstr ""
-"大約十年前，精靈來到韋霖的時候，他們談到有關一位名叫奎拉紐的法師， 和他對寶石"
+"大約十年前，精靈來到維丁的時候，他們談到有關一位名叫奎拉紐的法師， 和他對寶石"
 "的看法。他說，寶石的光輝可被包住，這樣就可避免它的負面影響。"
 
 #. [message]: speaker=Rugnur
@@ -3339,7 +3339,7 @@ msgid ""
 "south, to Weldyn, and reached it about the time that Alanin did."
 msgstr ""
 "還有哇咯，是的，哇咯也跟著他，我不知道這是怎樣辨到的。 總之，哇咯一路南下，就"
-"在阿蘭尼要到韋霖時，他也剛好抵達。"
+"在阿蘭尼要到維丁時，他也剛好抵達。"
 
 #. [unit]: type=Royal Guard, id=Guard Captain
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:63
@@ -3354,7 +3354,7 @@ msgstr "禁衛軍"
 #. [message]: speaker=Gatekeeper
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:99
 msgid "Halt! What is your business in Weldyn, capital of Wesnoth?"
-msgstr "站住！你到韋諾首都，韋霖，是有什麼重要的事情嗎？"
+msgstr "站住！你到韋諾首都，維丁，是有什麼重要的事情嗎？"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:103
